--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jspdf": "^2.5.1",
     "lucide-react": "^0.475.0",
     "next": "15.3.8",
+    "pako": "^2.1.0",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -60,6 +61,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pako": "^2.0.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "genkit-cli": "^1.14.1",
