--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jspdf": "^2.5.1",
     "lucide-react": "^0.475.0",
     "next": "15.3.8",
+    "next-themes": "^0.3.0",
     "pako": "^2.1.0",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
